--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "public": "npx angular-http-server --path public -p 80",
     "dev": "nodemon index.js",
     "build": "rm -rf dist; babel src -d dist",
-    "init": "npm run update; npm run build; npm start",
+    "init": "npm run update; npm i; npm run build; npm start",
     "start": "node dist/index.js",
     "update": "git reset --hard origin/main && git pull && npm run build",
     "clearbd": "rm database.sqlite",
     "clearbdw": "del database.sqlite",
-    "push": "git add . ; git commit -m lobo ; git push" 
+    "push": "git add . ; git commit -m lobo ; git push"
   },
   "dependencies": {
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
