--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "public": "npx angular-http-server --path public -p 80",
     "dev": "nodemon index.js",
     "build": "rm -rf dist; babel src -d dist",
-    "init": "npm run update; npm i; npm run build; npm start",
+    "init": "npm run update; npm run build; npm start",
     "start": "node dist/index.js",
-    "update": "git reset --hard origin/main && git pull && npm run build",
+    "update": "git reset --hard origin/main && git pull && npm i && npm run build",
     "clearbd": "rm database.sqlite",
     "clearbdw": "del database.sqlite",
     "push": "git add . ; git commit -m lobo ; git push"
